salesforce-integration/Salesforce-Components/objects/Error_Log__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <label>Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>