salesforce-integration/Salesforce-Components/objects/Error_Log__c/fields/Load__c.field-meta.xml
<CustomField>
    <fullName>Load__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Load</label>
    <referenceTo>rtms__Load__c</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>