salesforce-integration/Salesforce-Components/objects/Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Error__c</columns>
    <columns>Error_Code__c</columns>
    <columns>Description__c</columns>
    <columns>Payload__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>