salesforce-integration/Salesforce-Components/objects/Error_Log__c/listViews/E500.listView-meta.xml
<ListView>
    <fullName>E500</fullName>
    <columns>NAME</columns>
    <columns>Error__c</columns>
    <columns>Error_Code__c</columns>
    <columns>Description__c</columns>
    <columns>Payload__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Error_Code__c</field>
        <operation>equals</operation>
        <value>500</value>
    </filters>
    <label>500</label>
</ListView>