salesforce-integration/Salesforce-Components/objects/Error_Log__c/listViews/TODAY.listView-meta.xml
<ListView>
    <fullName>TODAY</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Error__c</columns>
    <columns>Error_Code__c</columns>
    <columns>Description__c</columns>
    <columns>Payload__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>TODAY</label>
</ListView>